module(
    name = "rendezqueue_ccgrpc",
    version = "0.0.0",
)

bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "rules_proto", version = "6.0.0.bcr.1")

bazel_dep(
    name = "abseil-cpp",
    version = "20240116.2",
    repo_name = "com_google_absl")
bazel_dep(
    name = "grpc",
    version = "1.62.1.bcr.1",
    repo_name = "com_github_grpc_grpc")

bazel_dep(
    name = "fildesh",
    version = "0.1.9",
    dev_dependency = True)
git_override(
    module_name = "fildesh",
    remote = "https://github.com/fildesh/fildesh.git",
    commit="11ff65ed78103bc1b1caefb1deb8fa42110eea08",
)
bazel_dep(
    name = "rules_sxproto",
    version = "0.0.4",
    dev_dependency = True)
git_override(
    module_name = "rules_sxproto",
    remote = "https://github.com/rendezqueue/rules_sxproto.git",
    commit="c720229ebe571b470efc6b34fda182308e56c1c8",
)
