module(
    name = "rendezqueue_ccgrpc",
    version = "0.0.0",
)

bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "grpc",
    version = "1.66.0.bcr.2",
    repo_name = "com_github_grpc_grpc",
)

bazel_dep(
    name = "fildesh",
    version = "0.1.9",
    dev_dependency = True,
)
git_override(
    module_name = "fildesh",
    commit = "e9421ebbb546cf38bf2051d02fdc38dcf71f8216",
    remote = "https://github.com/fildesh/fildesh.git",
)

bazel_dep(
    name = "rules_sxproto",
    version = "0.0.4",
    dev_dependency = True,
)
git_override(
    module_name = "rules_sxproto",
    commit = "3b2c69cc8bc5e72b1da198551e16575a09513df9",
    remote = "https://github.com/rendezqueue/rules_sxproto.git",
)
